--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,11 +14,12 @@
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
   <meta name="description" content="Web site created using create-react-app" />
-  <title>🎞 App Movies 🎞</title>
+  <title>🎞 Etec Filmes 🎞</title>
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <noscript>You need to enable JavaScript to run this app.
+    (Você precisa ativar o JavaScript para executar este aplicativo)</noscript>
   <div id="root"></div>
 </body>
 
